cart-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-cart-service
  name: shopnow-cart-service-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-cart-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-cart-service
      namespace: shopnow
    spec:
      containers:
        - image: thuanlp/shopnow_cart-service:v1
          imagePullPolicy: Always
          name: shopnow-cart-service
          ports:
            - containerPort: 5863
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-cart-service-application-properties-config-volume
              subPath: application.properties
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 5863
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /swagger-ui/index.html
              port: 5863
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
      imagePullSecrets:
      - name: shopnow-registry-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-cart-service-application-properties-configmap
          name: shopnow-cart-service-application-properties-config-volume
